--- a/views/user/myaccount.hbs
+++ b/views/user/myaccount.hbs
@@ -403,7 +403,7 @@ document.addEventListener("DOMContentLoaded", function () {
   }
 </script>
 
-
+{{!-- current working ajax below --}}
 {{!-- <script>
   function cancelOrder(orderId, productId) {
     const confirmation = confirm("Are you sure you want to cancel this order?");
