fixed some  errors

--- a/views/admin/orders.hbs
+++ b/views/admin/orders.hbs
@@ -116,6 +116,7 @@
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
     </div>
 
+{{!-- not working but good&easy --}}
 {{!-- <script>
   document.querySelectorAll('.status-select').forEach(function(selectElement) {
   selectElement.addEventListener('change', function() {
@@ -149,6 +150,7 @@
 
 </script> --}}
 
+{{!-- current working code --}}
 <script>
   document.querySelectorAll('.status-select').forEach(function(selectElement) {
   selectElement.addEventListener('change', function() {
