--- a/views/partials/adminSidebar.hbs
+++ b/views/partials/adminSidebar.hbs
@@ -32,6 +32,7 @@
                     <a href="/admin/coupon" class="nav-item nav-link   {{#if (eq activePage 'coupon')}}active{{/if}}"><i class="fa fa-chart-bar me-2"></i>coupons</a>
                     <a href="/admin/orders" class="nav-item nav-link   {{#if (eq activePage 'orders')}}active{{/if}}"><i class="fa fa-shopping-cart me-2"></i>orders</a>
                     <a href="/admin/returns" class="nav-item nav-link   {{#if (eq activePage 'returns')}}active{{/if}}"><i class="fa fa-undo me-2"></i>returns</a>
+                    <a href="/admin/cancellations" class="nav-item nav-link {{#if (eq activePage 'cancellations')}}active{{/if}}"><i class="fa fa-times me-2"></i>cancellations</a>
                     <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Forms</a>
                     <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Tables</a>
                     <a href="#" class="nav-item nav-link"><i class="far fa-file-alt me-2"></i>Pages</a>
